--- a/package.json
+++ b/package.json
@@ -23,12 +23,16 @@
   "devDependencies": {
     "angular-mocks": "^1.6.6",
     "chai-as-promised": "^7.1.1",
+    "chai-spies": "^0.7.1",
     "eslint": "^3.17.1",
     "eslint-config-loopback": "^8.0.0",
+    "jasmine-core": "^2.8.0",
     "karma-chai": "^0.1.0",
     "karma-chai-as-promised": "^0.1.2",
+    "karma-chai-spies": "^0.1.4",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.1",
+    "karma-jasmine": "^1.1.0",
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.4",
     "nsp": "^2.1.0"
