--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint .",
     "start": "node .",
     "test": "karma start karma.conf.js",
-    "posttest": "npm run lint && nsp check"
+    "posttest": "npm run lint && nsp check",
+    "e2e": "protractor protractor.conf.js"
   },
   "dependencies": {
     "compression": "^1.0.3",
