--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
     "chai-spies": "^0.7.1",
     "eslint": "^3.17.1",
     "eslint-config-loopback": "^8.0.0",
+    "grunt": "^1.0.1",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-open": "^0.2.3",
+    "grunt-run": "^0.8.0",
     "jasmine-core": "^2.8.0",
     "karma-chai": "^0.1.0",
     "karma-chai-as-promised": "^0.1.2",
