--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "karma-jasmine": "^1.1.0",
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.4",
-    "nsp": "^2.1.0"
+    "nsp": "^2.1.0",
+    "protractor-jasmine2-screenshot-reporter": "^0.5.0"
   },
   "repository": {
     "type": "",
