--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "compression": "^1.0.3",
     "cors": "^2.5.2",
     "helmet": "^1.3.0",
+    "jspdf": "^1.3.5",
     "karma": "^1.7.1",
     "loopback": "^3.0.0",
     "loopback-boot": "^2.6.5",
