--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "karma-coverage": "^1.1.1",
     "karma-jasmine": "^1.1.0",
     "karma-mocha": "^1.3.0",
+    "karma-ng-html2js-preprocessor": "^1.0.0",
     "karma-phantomjs-launcher": "^1.0.4",
     "nsp": "^2.1.0",
     "protractor-jasmine2-screenshot-reporter": "^0.5.0"
